<resources>
    <string name="app_name">AwsomeEat</string>
    <string name="slogan">Awsome Eats Helps you find the yummiest food around ! </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="send">Send</string>
    <string name="choose_an_restaurant">Please choose an restaurant first!</string>
    <string name="menu_homedrawer">Menu</string>
    <string name="added_to_cart_toast">Added to Cart</string>
    <string name="Continue_shopping_button">Continue Shopping</string>
    <string name="go_to_cart_button">Go to cart</string>
    <string name="add_new_restaurant">Add new restaurant</string>
    <string name="edit_menu">Edit the menu in a restaurant</string>
    <string name="search_restaurant">Search for a restaurant</string>
    <string name="Order_placed_successfully">Order placed successfully!</string>
    <string name="no">NO</string>
    <string name="place_order">Place order</string>
    <string name="do_you_want_to_place_order">Do you want to place your order?</string>
    <string name="Yes">YES</string>
    <string name="update_dish">Update dish</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="do_you_want_to_delete_item">Do you want to delete item from cart?</string>
    <string name="observe_that_price_might_be_wrong">Observe that the price might be wrong!</string>
    <string name="exit">Exit</string>
    <string name="do_you_really_want_to_close_the_app">Do you really want to close the app?</string>
    <string name="european">European</string>
    <string name="restaurants">Restaurants</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="admin">Admin</string>
    <string name="not_empty_email">Email can not be empty!</string>
    <string name="at_least_6_characters">Password must have at least 6 characters!</string>
    <string name="no_match_password">Passwords do not match!</string>
    <string name="registration_succeeded">Registration succeeded!</string>
    <string name="please_wait">Please Wait</string>
    <string name="didnt_enter_email_password"><![CDATA[You didn\'t enter email & password!]]></string>
    <string name="must_enter_adress">Must enter address!</string>
    <string name="must_enter_name">Must enter name!</string>
    <string name="add_dish">Add Dish</string>
    <string name="add_resturant">Add Restaurant</string>
    <string name="add_some_items_to_cart">Add some items to cart !</string>
    <string name="cart_is_empty">Cart is empty!</string>
    <string name="cart">Cart</string>
    <string name="whole_menu">Whole menu</string>
    <string name="close">Close</string>
    <string name="please_enter_a_valid_picture_url">Please enter a valid URL for the picture</string>
    <string name="the_dish_have_been_updated">The dish have been updated</string>
    <string name="dish_added_to_restaurant_menu">The dish have been added to the restaurants menu</string>
    <string name="dish_have_been_removed">The dish have been removed</string>
    <string name="update_restaurant">Update Restaurant</string>
    <string name="the_restaurant_have_been_updated">The restaurant have been updated</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="total">Total:</string>
    <string name="_0">0</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_picture">user picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="was_deleted">Was deleted</string>

    <string name="profile_updated">Profile updated!</string>
    <string name="authentication_failer">Authentication failed.</string>
    <string name="delete_restaurant">Delete restaurant</string>
    <string name="the_restaurant_have_been_deleted">The restaurant have been deleted</string>
    <string name="the_restaurant_have_been_added">The restaurant have been added</string>
    <string name="enter_a_valid_picture_url">Enter a valid picture URL</string>
    <string name="adding_a_restaurant_with_default_picture">Adding a restaurant with default picture</string>
    <string name="name_of_the_restaurant">Enter the name of the restaurant</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="description">Description</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_a_url">Enter a URL</string>
    <string name="enter_an_url_for_the_picture_of_the_dish">Enter an URL for the picture of the dish</string>
    <string name="price">Price:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="category">Category</string>

</resources>
