<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart"/>

        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />

        <item
            android:id="@+id/admin"
            android:icon="@drawable/common_google_signin_btn_icon_light"
            android:title="@string/admin"
            />


    </group>



</menu>
