<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FoodDetailFragment">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:background="@color/fbutton_color_midnight_blue"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#0e0d0e"
            >

            <ImageView
                android:id="@+id/image_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:title="Food Name"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnCart"
        android:src="@drawable/ic_shopping_cart_black_24dp"
        android:backgroundTint="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true"

        />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:fontFamily="@font/actor"
                        android:id="@+id/food_name"
                        android:layout_marginTop="8dp"
                        android:padding="12dp"
                        android:text="Food Name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/layout_price"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/money" />

                        <TextView
                            android:fontFamily="@font/actor"
                            android:id="@+id/food_price"
                            android:layout_width="138dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_weight="9"
                            android:text="Food Price"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:fontFamily="@font/actor"
                            android:id="@+id/price_annotation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/observe_that_price_might_be_wrong"
                            android:visibility="gone"
                            tools:text="Priceannotation" />


                    </LinearLayout>

                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:id="@+id/number_button"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5sp"
                        android:layout_marginLeft="8sp"
                        android:layout_marginRight="8sp"
                        android:layout_marginTop="8sp"
                        app:backGroundColor="@color/fbutton_color_midnight_blue"
                        app:finalNumber="30"
                        app:initialNumber="1"
                        app:textSize="6sp" />




                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/fbutton_color_midnight_blue"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/food_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="Description"
                    android:shadowRadius="@android:integer/config_longAnimTime"
                    android:background="@android:color/white"
                    android:textColor="@color/fbutton_color_midnight_blue"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:background="@drawable/buttonshape"
                    android:id="@+id/Continue_shopping_button"
                    android:text="@string/Continue_shopping_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    />

                <Button
                    android:id="@+id/go_to_cart_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshape"
                    android:text="@string/go_to_cart_button" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>